# HDR-Tonemapping

./: CMakeLists.txt  README.md
contrib/: CMakeLists.txt
hdr-rs/: CMakeLists.txt  Cargo.toml
hdr-rs/include/hdr-rs/: metadata.h
include/hdr/: ToneMapping.h  hdr.hpp
src/: ToneMapping.cpp  hdr.cpp
test/: CMakeLists.txt  gtest_basic.cpp  image-hdr.cpp  video-hdr.cpp
